# fastapi-celery-example

./: README.md  celery_app.py  celery_worker.py  main.py  pyproject.toml
