[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["Wooseung Lee <lee.victor@sk.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
celery = "^5.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
